src/test/deca/syntax/invalid/created/lexer/WrongComment.deca
// Description:
// Ferme un commentaire plusieurs fois.
// Resultats:
// WrongComment.deca:7:0: no viable alternative at input '*'
/* test

*/
*/*/*/